Fix the popup shifting things down :question:
May just be a temp fix until I figure out something better?

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,3 +21,7 @@ body {
     0 3px 1px -2px rgba(0, 0, 0, .2),
     0 1px 5px 0 rgba(0, 0, 0, .12);
 }
+
+.cdk-global-scrollblock {
+  position: initial;
+}
